--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,7 @@ body {
 }
 
 .hero .content h1 {
-  font-size: 5em;
+  font-size: 4rem;
   color: #fff;
   text-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
   line-height: 1.2;
@@ -131,7 +131,7 @@ body {
   font-size: 1.6rem;
   margin-top: 1rem;
   line-height: 1.4;
-  font-weight: 100;
+  font-weight: 200;
   text-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
   mix-blend-mode: difference;
 }
@@ -193,8 +193,19 @@ body {
 .about .row .content p {
   margin-bottom: 0.8rem;
   font-size: 1.3rem;
-  font-weight: 100;
+  font-weight: 200;
   line-height: 1.6;
+  text-align: justify;
+}
+
+.about .row .content p span {
+  font-style: italic;
+  font-weight: 600;
+  color: var(--primary);
+}
+
+.about .row .content p em {
+  font-weight: 600;
 }
 
 /* Menu Section */
@@ -207,7 +218,7 @@ body {
   text-align: center;
   max-width: 30rem;
   margin: auto;
-  font-weight: 100;
+  font-weight: 200;
   line-height: 1.6;
 }
 
@@ -224,6 +235,8 @@ body {
 }
 
 .menu .row .menu-card img {
+  max-height: 300px;
+  max-width: 300px;
   border-radius: 50%;
   width: 80%;
 }
